--- a/assistant.desktop
+++ b/assistant.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Assistant
 Comment=Start the Assistant Program
-Exec=konsole --hold -e "bash -c 'source /home/momwhyareyouhere/venv/bin/activate && /usr/bin/assistant'"
+Exec=bash -c 'source /home/momwhyareyouhere/venv/bin/activate && /usr/bin/assistant'
 Icon=utilities-terminal
 Terminal=false
 Type=Application
